Fix scrollbar display

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -3,15 +3,11 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--mantine-color-dark-5);
+    background: grey;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: var(--mantine-color-dark-4);
-}
-
-::-webkit-scrollbar-corner {
-    background: var(--mantine-color-text);
+    background: darkgrey;
 }
 
 body {
